# agenticAIMDLC

./: README.md  pyproject.toml  requirements.txt
.cursor/plans/: agentic_mdl_phased_plan_faf6ce2f.plan.md  phase_1b_workflow_sdk_50a3fe9a.plan.md
Reference/: Agentic workflow design.txt  Data Prep SDK.md  Full Dev and Validation Agentic AI.txt  RAG KB Design.md  Sdk details.md  Skills Stack.md  Token guide.md  UI UX Planning.md  URD Jupyter.md  UX URD.md  Validation agentic flow.md  Workflow Canvas.md  sdk_list.txt  slide_functions_tools_skills.html  slide_layer_architecture.html  slide_response_flow.html  slide_roadmap.html
Reference/enhancementv0.1/: Agent Skill Master.md  Folder structure.md  Module.md  Payload flow pack.md  Runtime context.md
Reference/enhancementv0.2/: (MAS) DLC.md  Base classes.md  File by file.md  Function signature.md
Reference/enhancementv0.3/: Copiable frontend folder structure.md  Copiable type script front end.md  Data driven yaml.md  ECL FLOW Breakdown.md  ECl model workflow.md  File by file skeleton.md  Front End Widget Protocol Spec.md  Function catalog table.md  Jupyter front end implementation URD.md  Key component in agentic Ai.md  Process Flowchart.md  Pytanic Schema Design.md  Python Code Skeleton - Controller Pack.md  Python Code Skeleton - Runtime Config.md  Python Code Skeleton - Runtime Resolver.md  Python Code Skeleton- Jupyter bridge & Widget Event Contract.md  Registry table.md  Runtime decision.md  Stage by stage orchestration.md  Tools calling.md  Tools registry table.md
configs/runtime/: domain.yaml  environment.yaml  failure_routes.yaml  governance.yaml  governance_overlays.yaml  interaction_modes.yaml  retry_policies.yaml  role_capabilities.yaml  roles.yaml  routes.yaml  runtime_master.yaml  stage_preconditions.yaml  stage_registry.yaml  stage_tool_matrix.yaml  stages.yaml  token_modes.yaml  tool_groups.yaml  ui.yaml  ui_modes.yaml  workflow_routes.yaml
configs/schemas/: artifact_registry.schema.json  audit_event.schema.json  (+16 more)
sdk/auditsdk/: __init__.py  audit_service.py  models.py  pyproject.toml
sdk/auditsdk/src/auditsdk/: __init__.py  models.py  service.py
sdk/config_sdk/: __init__.py  config_service.py  models.py  pyproject.toml
sdk/config_sdk/src/config_sdk/: __init__.py  models.py  service.py
sdk/docsdk/: pyproject.toml
sdk/docsdk/src/docsdk/: __init__.py
sdk/feature_selection_sdk/: pyproject.toml
sdk/feature_selection_sdk/src/feature_selection_sdk/: __init__.py  enums.py  models.py  stability.py
sdk/feature_selection_sdk/src/feature_selection_sdk/methods/: __init__.py  base.py  correlation_filter.py  mutual_information.py  permutation_importance.py  rfe.py
sdk/flowvizsdk/: __init__.py  pyproject.toml
sdk/flowvizsdk/src/flowvizsdk/: __init__.py  edge_builder.py  flow_filters.py  graph_export.py  models.py  node_builder.py  service.py  timeline_builder.py
sdk/hitlsdk/: __init__.py  action_validator.py  models.py  pyproject.toml  review_store.py  service.py
sdk/observabilitysdk/: __init__.py  event_store.py  models.py  observability_service.py  pyproject.toml
sdk/observabilitysdk/src/observabilitysdk/: __init__.py  models.py  service.py
sdk/platform_core/: __init__.py  pyproject.toml
sdk/platform_core/bridges/: __init__.py  agent_bridge.py  base_bridge.py  jupyter_bridge.py
sdk/platform_core/controllers/: __init__.py  base.py  factory.py  recovery_controller.py  review_controller.py  session_controller.py  workflow_controller.py
sdk/platform_core/domain/: __init__.py  base_domain_sdk.py  loader.py  models.py
sdk/platform_core/runtime/: __init__.py  config_loader.py
sdk/platform_core/runtime/config_models/: __init__.py  base.py  bundle.py  domain.py  enums.py  environment.py  fragments.py  governance.py  retries.py  roles.py  routes.py  runtime_master.py  stages.py  tool_groups.py  ui.py
sdk/platform_core/runtime/resolvers/: __init__.py  allowlist_resolver.py  governance_rule_resolver.py  retry_policy_resolver.py  role_config_resolver.py  runtime_resolver.py  tool_group_resolver.py  ui_mode_resolver.py
sdk/platform_core/schemas/: __init__.py  base_model_base.py  base_result.py  common_fragments.py  enums.py  payload_models.py  utilities.py
sdk/platform_core/services/: __init__.py  base_bridge.py  base_controller.py  base_runtime_component.py  base_service.py  base_widget_component.py
sdk/platform_core/src/platform_core/: __init__.py
sdk/platform_core/src/platform_core/bridges/: __init__.py  base.py
sdk/platform_core/src/platform_core/controllers/: __init__.py  base.py  factory.py  recovery.py  review.py  session.py  workflow.py
sdk/platform_core/src/platform_core/domain/: __init__.py  base_domain_sdk.py  loader.py  models.py
sdk/platform_core/src/platform_core/runtime/: __init__.py  config_loader.py  resolver.py  stage_config_resolver.py
sdk/platform_core/src/platform_core/runtime/config_models/: __init__.py  base.py  bundle.py  domain.py  enums.py  environment.py  fragments.py  governance.py  roles.py  routes.py  stages.py  tool_groups.py  ui.py
sdk/platform_core/src/platform_core/schemas/: __init__.py  base.py  payloads.py
sdk/platform_core/src/platform_core/services/: __init__.py  base.py
sdk/platform_core/src/platform_core/utils/: __init__.py  dependency_container.py  id_factory.py  time_provider.py
sdk/policysdk/: __init__.py  models.py  overlay_engine.py  pyproject.toml  service.py
sdk/presentationsdk/: pyproject.toml
sdk/presentationsdk/src/presentationsdk/: __init__.py
sdk/registry_sdk/: __init__.py  models.py  pyproject.toml  registry_service.py
sdk/registry_sdk/src/registry_sdk/: __init__.py  models.py  service.py  store.py
sdk/validationsdk/: __init__.py  pyproject.toml
sdk/validationsdk/src/validationsdk/: __init__.py  conclusion_engine.py  evidence_store.py  finding_registry.py  models.py  remediation_tracker.py  service.py
sdk/workflowsdk/: __init__.py  bootstrap.py  candidate.py  models.py  pyproject.toml  recovery.py  routing_engine.py  selection.py  service.py  session.py  stage_registry.py  state_store.py
tests/: conftest.py
(+216 files in other folders)
