[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-audit-sdk"
version = "0.1.0"
description = "Immutable audit record and decision chain SDK for the MDLC framework"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-platform-core",
    "mdl-observability-sdk",
    "pydantic>=2.6",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auditsdk"]
