[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-hitl-sdk"
version = "0.1.0"
description = "Human-in-the-loop review lifecycle, action validation, and decision capture for the MDLC framework"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-platform-core",
    "mdl-registry-sdk",
    "mdl-observability-sdk",
    "mdl-audit-sdk",
    "mdl-workflow-sdk",
    "pydantic>=2.6",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hitlsdk"]
