[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-observability-sdk"
version = "0.1.0"
description = "Append-only observability event store and trace SDK for the MDLC framework"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-platform-core",
    "pydantic>=2.6",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observabilitysdk"]
