[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-policy-sdk"
version = "0.1.0"
description = "Policy pack loader, metric evaluation, breach detection, and governance overlay engine for the MDLC framework"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-platform-core",
    "mdl-observability-sdk",
    "mdl-audit-sdk",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/policysdk"]
