[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-presentation-sdk"
version = "0.1.0"
description = "PowerPoint/slide deck generation for model governance review packages"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-artifact-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src/presentationsdk"]
