[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-validation-sdk"
version = "0.1.0"
description = "Validation SDK -- validation scope, findings, conclusion engine, remediation"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-platform-core",
    "mdl-observability-sdk",
    "mdl-audit-sdk",
    "mdl-artifact-sdk",
    "pydantic>=2.0",
    "structlog>=23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/validationsdk"]
