[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdl-workflow-sdk"
version = "0.1.0"
description = "Event-sourced workflow state, stage routing, candidate/selection registry, and session management for the MDLC framework"
requires-python = ">=3.11"
dependencies = [
    "mdl-platform-contracts",
    "mdl-platform-core",
    "mdl-registry-sdk",
    "mdl-observability-sdk",
    "mdl-audit-sdk",
    "pydantic>=2.6",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workflowsdk"]
